--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons": "^1.117.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "lodash": "^4.17.21",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
